Wed Mar 21 07:23:15 2001  Douglas C. Schmidt  <schmidt@ace.cs.wustl.edu>

	* tests/SOCK_Connector_Test.cpp (find_another_host): Make the
	  test a bit more resilent against errors with gethostbyname().
  	  Thanks to Lu Yunhai <luyunhai@huawei.com> for this fix.

Tue Mar 20 17:31:21 2001  Carlos O'Ryan  <coryan@uci.edu>

        * tests/run_test.lst:
          The Logging_Strategy_Test dynamically loads the Logger service
          (from netsvcs), therefore it does not work on static builds.

Tue Mar 20 18:17:24 2001  Douglas C. Schmidt  <schmidt@ace.cs.wustl.edu>

	* ace/OS.i: Fixed the USYNC_PROCESS arm of CreateMutex() in
	  ACE_OS::mutex_init() so that it calls
 	  ACE_OS::set_errno_to_last_error().  Thanks to Ram Ben-Yakir
 	  <Ram@bandwiz.com> for reporting this.

Tue Mar 20 01:33:24 2001  Ossama Othman  <ossama@uci.edu>

        * ace/SSL/SSL_SOCK_Acceptor.cpp (ssl_accept):
        * ace/SSL/SSL_SOCK_Connector.cpp (ssl_connect):
        * ace/SSL/SSL_SOCK_Stream.i (send, close):

          Wrap the underlying OpenSSL calls in a do-while(SSL_pending())
          loop.  I decided to wrap the SSL_write() calls just in case.
          This should fix the last of the non-blocking IO issues in ACE's
          SSL wrappers.  [Bug 393]

Tue Mar 20 00:40:43 2001  Ossama Othman  <ossama@uci.edu>

        * ace/SSL/SSL_SOCK_Stream.i (recv):

          Fixed non-blocking IO support for this method.  It was necessary
          to ensure that a full SSL record was read before returning
          control to the caller.  Note that the send() method doesn't need
          modification since OpenSSL always writes a full record before
          returning.  [Bug 393]

Mon Mar 19 19:53:34 2001  Carlos O'Ryan  <coryan@uci.edu>

        * include/makeinclude/ace_flags.bor:
          Define macros for the RT Event Service test library

Mon Mar 19 16:57:43 2001  Irfan Pyarali  <irfan@cs.wustl.edu>

        * ace/TP_Reactor.cpp (handle_events): Return value from